# game-api

./: .env-dev  .gitignore  Makefile  pyproject.toml  setenv.ps1
src/: main.py  routes.py
src/answer/: domain.py  models.py  repository.py  routes.py  schemas.py
src/api/: dependencies.py  events.py  exc.py  schema.py
src/api/security/: authentication.py  password.py  tokens.py
src/auth/: domain.py  models.py  repository.py  routes.py  schemas.py
src/common/: page.py  result.py  user.py
src/core/: settings.py
src/database/: config.py  connection.py  repository.py
src/database/repositories/: game.py
src/domain/: game.py
src/game/: domain.py  repository.py  routes.py  schemas.py
src/models/: __init__.py  game.py
src/points/: __init__.py  domain.py  models.py  repository.py  routes.py  schemas.py
src/question/: domain.py  models.py  repository.py  routes.py  schemas.py
src/question_type/: models.py  repository.py  schemas.py
src/routes/: __init__.py  administrative.py  core.py  microservice.py
src/schemas/: __init__.py  game.py  schema.py
src/user/: __init__.py  domain.py  models.py  repository.py  routes.py  schemas.py
