[tool.poetry]
name = "game-api"
version = "0.1.0"
description = ""
authors = ["enrico <enrico.marquez@duko.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
odmantic = "^1.0.0"
yarl = "^1.9.4"
lazy-fields = "^1.0.1"
env-star = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
