[tool.poetry]
name = "game-api"
version = "0.1.0"
description = ""
authors = ["enrico <enricovmarquezz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
odmantic = "^1.0.0"
yarl = "^1.9.4"
lazy-fields = "^1.0.1"
env-star = "^2.3.0"
uvicorn = "^0.27.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
humps = "^0.2.2"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
